use toList instead of collect(toList)